# comicdb

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
chrome_app/: background.js  content.js  index.html  manifest.json  scrape.js
chrome_app/actions/: all.js  author.js  genere.js  thumb.js  title.js  vol_thumb.js
db/: comic_list.sql  schema.sql
mysql/: schema.sql
src/: crud.rs  lib.rs  main.rs  types.rs  ui.rs
