[package]
name = "comicdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["-Z", "threads=8"]


[dependencies]
copypasta = "0.10.1"
eframe = "0.27.2"
egui-notify = "0.14.0"
egui_extras = { version = "0.27.2", features = ["all_loaders"] }
image = { version = "0.24",  default-features = false, features = ["jpeg"] }
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serde = "1.0.203"
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.38.0", features = ["full"] }

[build-dependencies]
winresource = "0.1.17"
